test/corpus/sandbox.txt
vim: list listchars=eol\:¬,extends\:>,precedes\:<,space\:⋅,tab\:>\ ,trail\:⋅

================================================================================
sandbox
================================================================================
first line
    foo
  bar
   baz
--------------------------------------------------------------------------------
(textblock
	(textblock_fragment)
	(incidental_ws)
	(textblock_fragment)
	(incidental_ws)
	(textblock_fragment)
	(incidental_ws)
	(textblock_fragment))

================================================================================
no ws
================================================================================
first line
foo
bar
baz
--------------------------------------------------------------------------------
(textblock
	(textblock_fragment)
	(textblock_fragment)
	(textblock_fragment)
	(textblock_fragment))

================================================================================
no incidental ws
================================================================================
first line
    foo
bar
  baz
--------------------------------------------------------------------------------
(textblock
	(textblock_fragment)
	(textblock_fragment)
	(textblock_fragment)
	(textblock_fragment))

================================================================================
mixed indentation leaders
================================================================================
first line
		foo
        bar
        baz
--------------------------------------------------------------------------------
(textblock
	(textblock_fragment)
	(textblock_fragment)
	(textblock_fragment)
	(textblock_fragment))

================================================================================
middle empty line
================================================================================
first line
    foo

  bar
   baz
--------------------------------------------------------------------------------
(textblock
	(textblock_fragment)
	(incidental_ws)
	(textblock_fragment)
	(textblock_fragment)
	(incidental_ws)
	(textblock_fragment)
	(incidental_ws)
	(textblock_fragment))

================================================================================
only empty line
================================================================================
first line

--------------------------------------------------------------------------------
(textblock
	(textblock_fragment))

================================================================================
starting empty line
================================================================================


	foo
	bar
--------------------------------------------------------------------------------
(textblock
	(textblock_fragment)
	(textblock_fragment)
	(incidental_ws) (textblock_fragment)
	(incidental_ws) (textblock_fragment))
